// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders thumbnail correctly with missing image 1`] = `
<View>
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../src/images/missing.png",
      }
    }
    style={
      Array [
        Object {
          "height": 50,
          "width": 50,
        },
        Object {
          "borderRadius": 6,
        },
      ]
    }
  />
</View>
`;

exports[`renders thumbnail correctly with patch image 1`] = `
<View>
  <Image
    resizeMode="contain"
    source={
      Object {
        "uri": "https://images2.imgbox.com/12/47/6uim8L1a_o.png",
      }
    }
    style={
      Array [
        Object {
          "height": 50,
          "width": 50,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`renders thumbnail correctly with patch image and option style prop 1`] = `
<View>
  <Image
    resizeMode="contain"
    source={
      Object {
        "uri": "https://images2.imgbox.com/12/47/6uim8L1a_o.png",
      }
    }
    style={
      Array [
        Object {
          "height": 50,
          "width": 50,
        },
        Object {
          "height": 30,
          "width": 30,
        },
      ]
    }
  />
</View>
`;
